--- a/Node/pom.xml
+++ b/Node/pom.xml
@@ -20,6 +20,8 @@
     <telegram.version>6.9.7.1</telegram.version>
     <lombok.version>1.18.34</lombok.version>
     <kafka.version>3.2.2</kafka.version>
+    <postgres.version>42.7.3</postgres.version>
+    <xml.bind.version>2.3.0</xml.bind.version>
   </properties>
 
   <dependencies>
@@ -58,6 +60,24 @@
       <groupId>com.vlat</groupId>
       <artifactId>AnonimkaCommonData</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgres.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${xml.bind.version}</version>
     </dependency>
   </dependencies>
 </project>
