--- a/Dispatcher/pom.xml
+++ b/Dispatcher/pom.xml
@@ -18,6 +18,7 @@
         <telegram.version>6.9.7.1</telegram.version>
         <lombok.version>1.18.34</lombok.version>
         <kafka.version>3.2.2</kafka.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
@@ -56,6 +57,12 @@
             <groupId>com.vlat</groupId>
             <artifactId>AnonimkaCommonData</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
