--- a/Node/pom.xml
+++ b/Node/pom.xml
@@ -22,6 +22,7 @@
     <kafka.version>3.2.2</kafka.version>
     <postgres.version>42.7.3</postgres.version>
     <xml.bind.version>2.3.0</xml.bind.version>
+    <log4j.version>1.2.17</log4j.version>
   </properties>
 
   <dependencies>
@@ -84,5 +85,12 @@
       <artifactId>jaxb-api</artifactId>
       <version>${xml.bind.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+
   </dependencies>
 </project>
