--- a/CompanionSearcher/src/main/resources/application.yaml
+++ b/CompanionSearcher/src/main/resources/application.yaml
@@ -1,21 +1,25 @@
 server:
-  port:
-    8102
+  port: ${SEARCHER_PORT}
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/anonimka
-    username: vlat
-    password: 31415926Zdec
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+      boot:
+        allow_jdbc_metadata_access=false
     hibernate:
       ddl-auto: update
       show-sql: true
 
   kafka:
-    bootstrap-servers: localhost:9095
+    bootstrap-servers: ${KAFKA_URL}
     producer:
-      bootstrap-servers: localhost:9095
+      bootstrap-servers: ${KAFKA_URL}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
@@ -25,7 +29,7 @@ spring:
 
 
     consumer:
-      bootstrap-servers: localhost:9095
+      bootstrap-servers: ${KAFKA_URL}
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       group-id: messages-to-bot-consumers
