--- a/Dispatcher/pom.xml
+++ b/Dispatcher/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
 
     <name>Dispatcher</name>
+    <version>1.0</version>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -19,7 +20,44 @@
         <lombok.version>1.18.34</lombok.version>
         <kafka.version>3.2.2</kafka.version>
         <log4j.version>1.2.17</log4j.version>
+        <nexus.repository.url>http://192.168.43.86:8081/repository/vlat-maven-repo/</nexus.repository.url>
+        <AnonimkaCommonData.version>1.0</AnonimkaCommonData.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.vlat.DispatcherApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>my-nexus</id>
+            <url>${nexus.repository.url}</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -56,7 +94,7 @@
         <dependency>
             <groupId>com.vlat</groupId>
             <artifactId>AnonimkaCommonData</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${AnonimkaCommonData.version}</version>
         </dependency>
 
         <dependency>
@@ -67,3 +105,4 @@
     </dependencies>
 
 </project>
+
