--- a/Node/pom.xml
+++ b/Node/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.vlat</groupId>
   <artifactId>Node</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>Node</name>
@@ -23,7 +23,45 @@
     <postgres.version>42.7.3</postgres.version>
     <xml.bind.version>2.3.0</xml.bind.version>
     <log4j.version>1.2.17</log4j.version>
+    <nexus.repository.url>http://192.168.0.105:8081/repository/vlat-maven-repo/</nexus.repository.url>
+    <AnonimkaCommonData.version>1.0</AnonimkaCommonData.version>
+    <AnonimkaCommonJPA.version>1.0</AnonimkaCommonJPA.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>my-nexus</id>
+      <url>${nexus.repository.url}</url>
+    </repository>
+  </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.4.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.vlat.NodeApplication</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
@@ -60,12 +98,12 @@
     <dependency>
       <groupId>com.vlat</groupId>
       <artifactId>AnonimkaCommonData</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${AnonimkaCommonData.version}</version>
     </dependency>
     <dependency>
       <groupId>com.vlat</groupId>
       <artifactId>AnonimkaCommonJPA</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${AnonimkaCommonJPA.version}</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
