--- a/Node/Dockerfile
+++ b/Node/Dockerfile
@@ -3,6 +3,8 @@ FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR ./node
 COPY mvn-settings.xml /root/.m2/settings.xml
 COPY . ./
+ARG NEXUS_URL
+ENV NEXUS_URL=${NEXUS_URL}
 RUN mvn clean package
 
 #run stage
