Added redis messages linking
теперь связи сообщений хранятся не в хешмапе, а в редисе

--- a/Dispatcher/pom.xml
+++ b/Dispatcher/pom.xml
@@ -102,6 +102,13 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
