--- a/AnonimkaCommonData/pom.xml
+++ b/AnonimkaCommonData/pom.xml
@@ -31,7 +31,7 @@
   <distributionManagement>
     <repository>
       <id>my-nexus</id>
-      <url>http://localhost:8081/repository/vlat-maven-repo/</url>
+      <url>http://77.222.60.25:8081/repository/vlat-maven-repo/</url>
     </repository>
   </distributionManagement>
 
